changed picture tag

--- a/content/index.html
+++ b/content/index.html
@@ -21,8 +21,8 @@ title: Willkommen bei Markus Nentwich!
         <td rowspan="2">
             <!--Fallback for all browser versions-->
             <picture>
-                <source srcset="images/markus_portait.webp" type="image/webp" alt="Porträt Markus">
-                <source srcset="images/markus_portait.jpg" type="image/jpeg" alt="Porträt Markus">
+                <source srcset="images/markus_portait.webp" type="image/webp">
+                <source srcset="images/markus_portait.jpg" type="image/jpeg">
                 <img src="images/markus_portait.jpg" alt="Porträt Markus">
             </picture>
         </td>
